# wasm-test

./: .gitignore  Cargo.toml  README.md  fineart.txt  package-lock.json  package.json
src/: lib.rs  parser.rs
www/: package-lock.json  package.json  rollup.config.js
www/src/: App.svelte  main.js
