[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version= "0.2.63", features = ["serde-serialize"] }

